# scipy_optimize_with_rust

./: Cargo.toml  LICENSE  README.md  fit.py
src/: lib.rs
